<resources>
    <string name="app_name">Mealplean</string>
    <string name="main_name">@string/app_name</string>
    <string name="settings_name">Settings</string>

    <string name="type_main_dish">Main dish</string>
    <string name="type_side_dish">Side dish</string>
    <string name="type_dessert">Dessert</string>
    <string name="type_soup">Soup</string>
    <string name="type_none">None</string>

    <string name="price_student">Student</string>
    <string name="price_employee">Employee</string>
    <string name="price_guest">Guest</string>
    <string name="price_all">All</string>

    <string name="ingredient_alcohol">Alcohol</string>
    <string name="ingredient_cattle">Cattle</string>
    <string name="ingredient_deal">Deal</string>
    <string name="ingredient_fish">Fish</string>
    <string name="ingredient_lamb">Lamb</string>
    <string name="ingredient_oeko">Oeko</string>
    <string name="ingredient_pork">Pork</string>
    <string name="ingredient_poultry">Poultry</string>
    <string name="ingredient_vegan">Vegan</string>
    <string name="ingredient_vegetarian">Vegetarian</string>
    <string name="ingredient_vital">Vital</string>
    <string name="ingredient_wild">Wild</string>

    <string-array name="price_values">
        <item>@string/price_student</item>
        <item>@string/price_employee</item>
        <item>@string/price_guest</item>
        <item>@string/price_all</item>
    </string-array>

    <string name="location_oth" translatable="false">OTH Seybothstraße</string>
    <string name="location_oth_evening" translatable="false">OTH Seybothstraße (Abends)</string>
    <string name="location_pruefening" translatable="false">OTH Prüfening</string>
    <string name="location_university" translatable="false">Universität</string>

    <string name="caption_label_1" translatable="false">Label 1</string>
    <string name="caption_label_2" translatable="false">Label 2</string>
    <string name="caption_label_3" translatable="false">Label 3</string>
    <string name="caption_location">Location:</string>
    <string name="caption_date">Date:</string>

    <string name="ingredients">Ingredients</string>
    <string name="allergens">Allergens</string>
    <string name="labels">Labels</string>

    <string name="price_format" translatable="false">%s €</string>

    <string name="preference_appearance_switch_colorseparation_summary">Divide types with their own color scheme</string>
    <string name="preference_appearance_switch_colorseparation_title">Color separation</string>
    <string name="preference_appearance_list_price_summary">Select which price should be displayed</string>
    <string name="preference_appearance_list_price_title">Price</string>
    <string name="preference_cache_title">Cache</string>
    <string name="preference_cache_reset_settings_summary">Delete all settings and reset everything to default</string>
    <string name="preference_cache_reset_settings_title">Reset settings</string>
    <string name="preference_appearance_title">Appearance</string>
    <string name="preference_cache_clear_summary">Remove cached files from internal storage</string>
    <string name="preference_cache_clear_title">Clear cache</string>

    <string name="dialog_ingredients_title">Informations</string>

    <string name="dialog_issue_closed_title">Canteen seems closed</string>
    <string name="dialog_issue_closed_message">Server didn\'t return any data. Seems like the canteen is closed.</string>
    <string name="dialog_issue_connection_title">Connection issue</string>
    <string name="dialog_issue_connection_message">Couldn\'t contact server. Pleace make sure you\'re connected to a working network.</string>
    <string name="dialog_issue_unkown_title">An unknown error appeared</string>
    <string name="dialog_issue_unkown_message">Exception: %1$s</string>

    <string name="dialog_action_refresh">Refresh</string>
    <string name="dialog_action_exit">Exit</string>

    <string name="no_data_available">No data available</string>
    <string name="activity_splash_caption_connecting">Connecting to server…</string>
    <string name="activity_splash_caption_downloading">Downloading menu for location %1$s…</string>
    <string name="activity_splash_caption_verifying">Verifying menu for location %1$s…</string>
    <string name="activity_splash_caption_success">Successfully cached menu for location %1$s!</string>
    <string name="launcher_icon_desc" translatable="false">Launcher Icon</string>
    <string name="preference_copyright_title">Licenses</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
